--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -147,34 +147,34 @@
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Sprite.shader" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface.shader" />
     <Reference Include="Unity.Timeline.Editor">
-      <HintPath>E:/TheSquire/doomba-wars/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+      <HintPath>G:/School/Trimester 4/GDS210/Project 2/Group Concept/Unity/doomba-wars/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VSCode.Editor">
-      <HintPath>E:/TheSquire/doomba-wars/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
+      <HintPath>G:/School/Trimester 4/GDS210/Project 2/Group Concept/Unity/doomba-wars/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.InputSystem">
-      <HintPath>E:/TheSquire/doomba-wars/Library/ScriptAssemblies/Unity.InputSystem.dll</HintPath>
+      <HintPath>G:/School/Trimester 4/GDS210/Project 2/Group Concept/Unity/doomba-wars/Library/ScriptAssemblies/Unity.InputSystem.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>E:/TheSquire/doomba-wars/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>G:/School/Trimester 4/GDS210/Project 2/Group Concept/Unity/doomba-wars/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>E:/TheSquire/doomba-wars/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
+      <HintPath>G:/School/Trimester 4/GDS210/Project 2/Group Concept/Unity/doomba-wars/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline">
-      <HintPath>E:/TheSquire/doomba-wars/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+      <HintPath>G:/School/Trimester 4/GDS210/Project 2/Group Concept/Unity/doomba-wars/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.CollabProxy.Editor">
-      <HintPath>E:/TheSquire/doomba-wars/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+      <HintPath>G:/School/Trimester 4/GDS210/Project 2/Group Concept/Unity/doomba-wars/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Rider.Editor">
-      <HintPath>E:/TheSquire/doomba-wars/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
+      <HintPath>G:/School/Trimester 4/GDS210/Project 2/Group Concept/Unity/doomba-wars/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>E:/TheSquire/doomba-wars/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>G:/School/Trimester 4/GDS210/Project 2/Group Concept/Unity/doomba-wars/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
-      <HintPath>E:/TheSquire/doomba-wars/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
+      <HintPath>G:/School/Trimester 4/GDS210/Project 2/Group Concept/Unity/doomba-wars/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.2.21f1/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
